# Autonomous-UAV-Landing

./: .CMakeLists.txt.swp  .gitignore  .gitignore.swp  README.md
Calibration_ZhangZhengyou_Method/: calib_IR.py  calib_RGB.py
Calibration_ZhangZhengyou_Method/opencv_save_img/: CMakeCache.txt  CMakeLists.txt  Makefile  SaveImg  cmake_install.cmake  opencv_save_img.cpp
Calibration_ZhangZhengyou_Method/opencv_save_img/src/: .opencv_save_img.cpp.swo  .opencv_save_img.cpp.swp  opencv_save_img.cpp
Landing/: .CMakeLists.txt.swp  CMakeLists.txt
Landing/config/: landpad.yaml
Landing/include/: mission_utils.h  prometheus.h
Landing/src/: landing.cpp
create_board/: CMakeLists.txt  create_aruco_board.cpp  create_aruco_marker.cpp
create_board/build_create/: CMakeCache.txt  Makefile  ModelWash  cmake_install.cmake  create.sh
detect_board/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt  detect_board.cpp  detect_multi_markers.cpp  detect_single_image.cpp
detect_board/backup/: detect_aruco_marker.cpp  detect_board.cpp
detect_board/include/: NX_C_Share.h  Utils.cpp  Utils.h
detect_board/param/: romanc_intrisic.xml
detect_board/src/: .detect_multi_markers_5.cpp.swp  CMakeCache.txt  Makefile  cmake_install.cmake  detect_multi_markers_2.cpp  detect_multi_markers_5.cpp  detect_single_image.cpp  sheng.cpp  test.cpp
detect_board/src/back_files/: detect_aruco_marker.cpp  detect_multi_markers_2.cpp
detect_board/src/param/: intrisic.xml
write_camera/: CMakeCache.txt  CMakeLists.txt  Makefile  ModelWash  cmake_install.cmake  intrisic.xml  write_ci.cpp
